Acabat repas de ex 2

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header>
-<nav class="navbar navbar-light bg-light">
+<nav class="navbar">
   <span class="navbar-brand mb-0 h1">Bon dia!</span>
 </nav>
 
@@ -28,7 +28,7 @@
           <div class="card-body shadow">
         <article>
           <div id="jokes-container">
-                <p id="acudit">*acudit?*</p>
+                <p id="acudit">*acudit*</p>
                 
               </div>
               <button class="btn btn-primary" id="button">
