Exercici 6 acabat i Sprint finalitzat

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <header>
 <nav class="navbar">
-  <span class="navbar-brand mb-0 h1">Bon dia!</span>
+  <span class="navbar-brand mb-0 h1">Good morning!</span>
   <span id="weather"></span>
 </nav>
 
@@ -16,12 +16,12 @@
 <div class="container-flex">
   <div class="row justify-content-center text-center">
     <div class="col d-flex flex-column">
-      <h1 id="title-acudit">L'acudit del dia</h1>
+      <h1 id="title-acudit">Joke of the day</h1>
     </div>
   </div>
 </div>
 </header>
-<main class="vh-100 d-flex flex-column justify-content-center text-center">
+<main class="vh-100  flex-column justify-content-center text-center">
   <div class="container">
     <div class="row justify-content-center">
       <div class="col d-flex flex-column">
@@ -30,13 +30,12 @@
         <article>
           <div id="jokes-container">
                 <p id="acudit"></p>
-                
               </div>
               <div class="container">
      
                 <div class="btn-toolbar justify-content-center align-items-center mb-3" role="toolbar" aria-label="Toolbar with button groups">
                       <div> 😠 </div>
-                      <div class="btn-group mr-2" role="group" aria-label="Score from 1 to 3">
+                      <div class="btn-group mr-2" role="group" aria-label="Score from 1 to 3" id="score">
                         <button type="button" class="btn btn-secondary" id="score1">1</button>
                         <button type="button" class="btn btn-secondary" id="score2">2</button>
                         <button type="button" class="btn btn-secondary" id="score3">3</button>
